[gd_scene load_steps=13 format=3 uid="uid://dbdp2oi2aue3y"]

[ext_resource type="Script" uid="uid://bqd81s28s5lis" path="res://bee.gd" id="1_v5qog"]
[ext_resource type="Texture2D" uid="uid://d28b72gywou33" path="res://tilemap_packed.png" id="2_q8d8k"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_v5qog"]
radius = 4.242641
height = 14.142137

[sub_resource type="SeparationRayShape2D" id="SeparationRayShape2D_q8d8k"]
length = 113.0

[sub_resource type="SeparationRayShape2D" id="SeparationRayShape2D_hoj8b"]
length = 112.602646

[sub_resource type="SeparationRayShape2D" id="SeparationRayShape2D_b1nx6"]
length = 113.0

[sub_resource type="Animation" id="Animation_v5qog"]
resource_name = "move"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Rect2(504, 231, 21, 21), Rect2(525, 231, 21, 21)]
}

[sub_resource type="Animation" id="Animation_q8d8k"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(504, 231, 21, 21)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("rightray/CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("leftray/CollisionShape2D:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("rightray2/CollisionShape2D:disabled")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("leftray2/CollisionShape2D:disabled")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("downray/CollisionShape2D:disabled")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("die/CollisionShape2D:disabled")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("attakplayer/CollisionShape2D2:disabled")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_hoj8b"]
resource_name = "die"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -80)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:region_rect")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(546, 231, 21, 21)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("rightray/CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("leftray/CollisionShape2D:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("rightray2/CollisionShape2D:disabled")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("leftray2/CollisionShape2D:disabled")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("downray/CollisionShape2D:disabled")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("die/CollisionShape2D:disabled")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("attakplayer/CollisionShape2D2:disabled")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hoj8b"]
_data = {
&"RESET": SubResource("Animation_q8d8k"),
&"die": SubResource("Animation_hoj8b"),
&"move": SubResource("Animation_v5qog")
}

[sub_resource type="SegmentShape2D" id="SegmentShape2D_b1nx6"]
a = Vector2(0, 9.999996)
b = Vector2(0, 79.999985)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_q8d8k"]
radius = 3.25
height = 12.0

[node name="bee" type="Area2D"]
script = ExtResource("1_v5qog")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("2_q8d8k")
flip_h = true
region_enabled = true
region_rect = Rect2(504, 231, 21, 21)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 1)
rotation = 0.7853982
shape = SubResource("CapsuleShape2D_v5qog")

[node name="rightray" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="rightray"]
rotation = 0.7853982
shape = SubResource("SeparationRayShape2D_q8d8k")

[node name="leftray" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="leftray"]
rotation = -0.7853982
shape = SubResource("SeparationRayShape2D_hoj8b")
debug_color = Color(1, 0, 0, 0.41960785)

[node name="rightray2" type="Area2D" parent="."]
rotation = 0.20943952

[node name="CollisionShape2D" type="CollisionShape2D" parent="rightray2"]
rotation = 0.7853982
shape = SubResource("SeparationRayShape2D_q8d8k")

[node name="leftray2" type="Area2D" parent="."]
rotation = -0.20943952

[node name="CollisionShape2D" type="CollisionShape2D" parent="leftray2"]
rotation = -0.7853982
shape = SubResource("SeparationRayShape2D_hoj8b")
debug_color = Color(1, 0, 0, 0.41960785)

[node name="downray" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="downray"]
shape = SubResource("SeparationRayShape2D_b1nx6")
debug_color = Color(0.8515625, 1, 0, 0.41960785)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_hoj8b")
}

[node name="die" type="Area2D" parent="."]
position = Vector2(0, -1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="die"]
position = Vector2(3.9999998, -6)
rotation = 1.5707964
scale = Vector2(0.1, 0.1)
shape = SubResource("SegmentShape2D_b1nx6")
debug_color = Color(0.1953125, 1, 0, 0.41960785)

[node name="attakplayer" type="Area2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="attakplayer"]
position = Vector2(0, 1)
rotation = 0.7853982
shape = SubResource("CapsuleShape2D_v5qog")

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(-1, -3)
rotation = 1.5707964
shape = SubResource("CapsuleShape2D_q8d8k")

[connection signal="body_exited" from="rightray" to="." method="_on_rightray_body_exited"]
[connection signal="body_exited" from="leftray" to="." method="_on_leftray_body_exited"]
[connection signal="body_entered" from="rightray2" to="." method="_on_rightray_2_body_entered"]
[connection signal="body_exited" from="rightray2" to="." method="_on_rightray_2_body_exited"]
[connection signal="body_entered" from="leftray2" to="." method="_on_leftray_2_body_entered"]
[connection signal="body_exited" from="leftray2" to="." method="_on_leftray_2_body_exited"]
[connection signal="body_entered" from="die" to="." method="_on_die_body_entered"]
[connection signal="body_entered" from="attakplayer" to="." method="_on_attakplayer_body_entered"]
